Module 10 Video 6: Made each fact-card a flex container. Added text-dark-2 to number and text-dark-3 to name of fact-card. Changed section-desc to have a max-width of 540px. Changed display of facts-container to grid with 4 equal columns. Changed flex-direction of fact-card to column and adjusted align-items and justify-content to center in order to horizontally and vertically center card contents. Added a border of 1px solid orange and added border-radius to be 8px. Instead of setting a gap between the cards which would have to be changed based on screen size using media queries, added a fixed width and height to each fact-card. Added a margin-bottom to fact-icon and fact-number in order to space out contents of fact-card. Also added font-weight and font-size to fact-number and fact-name.

--- a/styles/g3-architects.css
+++ b/styles/g3-architects.css
@@ -137,8 +137,42 @@ main > section {
 }
 
 .section-desc {
+  max-width: 540px;
   line-height: 1.625rem;
   margin-bottom: 32px;
+}
+
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+  /* padding: 45px 36px 60px 36px;
+  text-align: center; */
+  /* Considered equal padding on both sides. Implemented with flex to center content horizontally and vertically */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ff900e;
+  border-radius: 8px;
+  width: 240px;
+  height: 240px;
+}
+
+.fact-icon {
+  margin-bottom: 10px;
+}
+
+.fact-number {
+  font-weight: 600;
+  font-size: 2.8125rem;
+  margin-bottom: 5px;
+}
+
+.fact-name {
+  font-weight: 600;
+  font-size: 1.25rem;
 }
 
 @media screen and (max-width: 576px) {
